# TRTTL

./: CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  idea.cpp  main.cpp
.github/workflows/: ci-cd.yml
include/: trttl.h
include/trttl/: logger.hpp  modules.hpp  utils.hpp
include/trttl/util/: cexpr_utils.hpp  trt_types.hpp
test/: test_logger.cpp  test_modules.cpp  test_ver.cpp
